--- a/Portfolio-Website-main/index.html
+++ b/Portfolio-Website-main/index.html
@@ -406,7 +406,7 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/jigar-sable">Mohamed Amir</a></h1>
+  <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/mohamed-amir-973645298/">Mohamed Amir</a></h1>
 
 </section>
 <!-- footer section ends -->
